<resources>
    <string name="app_name">V60BNS</string>
<!--    AIzaSyA6QI378BHt9eqBbiJKtqWHTSAZxcSwN3Q-->
    <string name="map_api_key">AIzaSyDPraQRuDWeIUxsjaCt_Q-l-MFe2snY2ds</string>
    <string name="search_key">AIzaSyDPraQRuDWeIUxsjaCt_Q-l-MFe2snY2ds</string>
    <string name="field_req">Field required</string>
    <string name="login">Login</string>
    <string name="code">Code</string>
    <string name="user_phone">User Phone</string>
    <string name="are_you_have_account">Are You Have Account ?</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="confirm">Confirm</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate this App</string>
    <string name="logout">Logout</string>
    <string name="about_app">About App</string>
    <string name="like">Like</string>

    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="field_required">Field Required</string>
    <string name="inv_email">Invalid Email</string>
    <string name="cannot_signup">Can Not Signup Without Accept Terms And Conditions</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="privacy">Privacy Policy</string>
    <string name="upload_image">Upload image</string>
    <string name="select_image_to_upload">Select Image to Upload</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="failed">Failed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ch_skill">Choose Skills</string>
    <string name="type_a_message">Type a message...</string>
    <string name="please_sign_in_or_sign_up">Please sign In or Sign Up</string>
    <string name="ok">Ok</string>
    <string name="skip">Skip</string>
    <string name="just_now">Just Now</string>

    <string name="invite">Invite</string>
    <string name="back">Back</string>
    <string name="refuse">Refuse</string>
    <string name="no_requests">No requests</string>
    <string name="req_refused">Your request refused</string>
    <string name="req_accepted">Your request accepted</string>
    <string name="no_conversation">No conversation</string>
    <string name="choose_language">Choose Language</string>
    <string name="next">next</string>

    <string name="year_of_birth">Year of birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_year">Choose year</string>
    <string name="ok2">OK</string>

    <string name="done">done</string>

    <string name="verify">verify</string>
    <string name="language_settings">Language Settings</string>
    <string name="country_code">Country code</string>
    <string name="code_verification">Code verification</string>
    <string name="enter_code_sent_to">Enter code sent to</string>
    <string name="name">name</string>
    <string name="phone_number">phone number</string>
    <string name="resend_in">Resend in</string>
    <string name="resend">Resend</string>
    <string name="banner_image">banner image</string>
    <string name="profile_image">profile image</string>
    <string name="store">store</string>
    <string name="add">add</string>
    <string name="comments">Comments</string>
    <string name="orders">orders</string>
    <string name="add_comment">Add Comment</string>
    <string name="replay">Replay</string>
    <string name="add_replay">Add Replay</string>
    <string name="my_posts">My Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="settings">Settings</string>
    <string name="general_settings">General Settings</string>
    <string name="terms_of_service">Terms Of Service</string>
    <string name="help">Help</string>
    <string name="version_no">Version Number</string>
    <string name="the_ingredients">The Ingredients</string>
    <string name="specifications">Specifications</string>
    <string name="weight">Weight</string>
    <string name="colorss">Color</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="quantity">Quantity</string>
    <string name="cart">Cart</string>
    <string name="total">Total</string>
    <string name="add_post">Add Post</string>
    <string name="post">post</string>
    <string name="add_place">Add Place</string>
    <string name="add_thing">Write something about this picture</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="default1">Default</string>
    <string name="places">Places</string>
    <string name="pay">Pay</string>
    <string name="type_message">Type message</string>
    <string name="light">: Light</string>
    <string name="g">: 20 g</string>
    <string name="something">Check internet connection</string>
    <string name="user_found">User Found</string>
    <string name="show_all_comment">Show All comment</string>
    <string name="ch_image">Choose Image</string>
    <string name="no_data_found">No Data Found</string>
    <string name="rial">ر.س</string>
    <string name="kilo">ك.ج</string>
    <string name="ryal">ryal</string>
    <string name="select_location_on_map">Select Location on Map</string>
    <string name="order_detials">Order Detials</string>
    <string name="current_order">Current Order</string>
    <string name="finish_order">Previous Order</string>
    <string name="suc">Success</string>
    <string name="client">client</string>
    <string name="expert">expert</string>
    <string name="manager_must_accept_your_request_first">Manager Must accept Your Request First</string>
    <string name="google_comments">Google Comments</string>
    <string name="other_commments">Other Commments</string>
    <string name="search">Search</string>
    <string name="experts">Experts</string>
    <string name="posts">posts</string>
    <string name="order_cancel_successfuly">تم الغاء الطلب بنجاح</string>
    <string name="send_message">  Send Mesaage to You</string>

</resources>