<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/home"
        android:title="@string/home"
        
        android:icon="@drawable/ic_home"
        />
    <item android:id="@+id/store"
        android:title="@string/store"
        android:icon="@drawable/ic_store"
        android:iconTint="@color/color1"

        />
    <item android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_add"
        android:iconTint="@color/color1"

        />
    <item android:id="@+id/comments"
        android:title="@string/comments"
        android:icon="@drawable/ic_experience"

        />
    <item android:id="@+id/profile"
        android:title=""
        android:icon="@drawable/user" />
</menu>