<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>

        <variable
            name="title"
            type="String" />

        <variable
            name="lang"
            type="String"


            />

        <variable
            name="model"
            type="com.v60BNS.models.UserModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray0"
                android:fillViewport="true"
                android:fitsSystemWindows="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <FrameLayout
                            android:id="@+id/fl"
                            image2="@{model.banner}"
                            android:layout_width="match_parent"
                            android:layout_height="170dp"
                            android:background="@drawable/gift"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                        </FrameLayout>


                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-50dp"
                        android:orientation="horizontal"
                        app:civ_circle_background_color="@color/white"
                        app:layout_constraintBottom_toBottomOf="@id/fl"
                        app:layout_constraintStart_toStartOf="parent">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image"
                            image2="@{model.logo}"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="1dp"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="65dp"
                            android:text="@{model.name}"
                            android:textColor="@color/color1"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imgSetting"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="end"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="-25dp"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_setting"
                        android:tint="@color/colorPrimary" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:id="@+id/llorder"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:text='@{model.orders_count+""}'
                                android:textColor="@color/color1"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/orders"
                                android:textColor="@color/color1"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:text='@{model.posts_count+""}'
                                android:textColor="@color/color1"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/my_posts"
                                android:textColor="@color/color1"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:text="125"
                                android:textColor="@color/color1"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/followers"
                                android:textColor="@color/color1"
                                android:textSize="14sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_margin="5dp"
                                android:text="20"
                                android:textColor="@color/color1"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/following"
                                android:textColor="@color/color1"
                                android:textSize="14sp" />
                        </LinearLayout>


                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5px"
                        android:background="@color/gray16" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:minHeight="200dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recViewFavoriteOffers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp" />


                        <ProgressBar
                            android:id="@+id/progBarOffer"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center"
                            android:visibility="gone" />

                    </FrameLayout>


                </LinearLayout>
            </androidx.core.widget.NestedScrollView>


        </FrameLayout>

        <include layout="@layout/comments_content" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>